app/assets/stylesheets/application.scss
/* ... */
// this should be fixed in various cases
.error {
   color: #F44336;
   opacity: 1;
   transition: .2s opacity ease-out, .2s color ease-out;
   box-sizing: inherit;
   white-space: nowrap;
   font-size: 1rem;
}

.input-field {
   & > .material-icons {
      padding-top: 10px;
   }

   // defaunlt color of form labels
   /* label color */
   label {
      color: #000;
   }

   .invalid + label.active:after {
      display: none !important;
   }

   input[type=text]:not(.browser-default):not([readonly]) {
      /* label focus color */
      &:focus + label {
         color: $soft_blue;
      }

      /* label underline focus color */
      &:focus {
         border-bottom: 1px solid $soft_blue;
         box-shadow: 0 1px 0 0 $soft_blue;
      }
   
      /* valid color */
      &.valid {
         border-bottom: 1px solid $soft_blue;
         box-shadow: 0 1px 0 0 $soft_blue;
      }
   
      /* invalid color */
      &.invalid {
         border-bottom: 1px solid $error_color;
         box-shadow: 0 1px 0 0 $error_color;
      }
   }

   .select-wrapper + label {
      height: 3.5rem;
   }

   /* icon prefix focus color */
   .prefix.active {
      color: $soft_blue;
   }

   select {
      display: block;
      height: 0;
      width: 0;
      padding: 0;
      border: none;
   }

   input[type="search"] {
      width: calc(100% - 2.5rem);
      padding-left: 0;

      &:focus {
         border-style: none none dotted;
         border-width: medium medium 1px;
      }
   }

   .error {
      @extend .error;
      transform: translateY(9px);
      position: absolute;
      top: 100%;
      left: 0;

      &:empty {
         display: none;
      }
   }
}

.fake-input-field {
   position: relative;
   margin-top: 2rem;

   [type="checkbox"]:checked + label:before {
      border-right: 2px solid $soft_blue;
      border-bottom: 2px solid $soft_blue;
   }
}

.collection {
   .collection-item {
      &.memory {
         min-height: auto;
         padding: 3px 0 0 0;
         color: black;
         background-color: white;

         .collapsible-header {
            padding: 0 1rem 0 4rem;
            line-height: 3rem;
            min-height: 3rem;
            display: block;
         }

         .collapsible-body {
            padding: 1rem;
         }
      }

      &.avatar:not(.circle-clipper) > .circle,
      &.avatar :not(.circle-clipper) > .circle {
         left: 0.5rem;
         top: 1px;
      }
   }
}

.carousel.compact {
   height: 200px;

   .carousel-item {
      width: auto;
      cursor: pointer !important;
      display: block;
   }

   img {
      height: 0;
   }

   &.initialized img {
      height: 200px;
   }
}

#slider-modal {
   width: 90%;
   overflow: hidden;
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
   filter: alpha(opacity=0);
   display: block !important;
   opacity: 1 !important;
   box-shadow: none;
   max-height: none;
   top: 0 !important;
   height: 0;

   .modal-content {
      padding: 0;
   }

   &.open {
      top: 5% !important;
      height: inherit;
   }
}

img.icon {
   height: 100%; // about 1020px;

   @media (max-height: $large_height) {
      height: 55em; // about 825px
   }

   @media (max-height: $medium_height) {
      height: 40em; // about 600px
   }

   @media (max-height: $small_height) {
      height: 25em; // about 375
   }
}

.lory_slider {
   margin: 0 auto 0;
   width: auto;
   position: relative;
   -moz-user-select: none;

   .frame {
      font-size: 0;
      line-height: 0;
      margin: 0 auto;
      overflow: hidden;
      position: relative;
      white-space: nowrap;
      padding: 0;
      background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
      border: 0 none;

      .slides {
         font-size: 0;
         line-height: 0;
         white-space: nowrap;
         display: inline-block;

         li {
            color: #fff;
            display: inline-block;
            font-family: "Source Sans Pro", sans-serif;
            font-size: 15px;
            line-height: 30px;
            position: relative;
            text-align: center;
            margin-right: 12px;

            img {
               margin-top: 8px;
               margin-bottom: 8px;
               margin-left: 8px;
               margin-right: 8px;
               background: rgba(255, 255, 255, 1) none repeat scroll 0 0;
               box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3)
            }

         }

         li:nth-last-child(1) {
            margin-right: 0;
         }
      }
   }

   .prev, .next {
      position: absolute;
      top: 50%;
      margin-top: -25px;
      display: block;
      cursor: pointer;
      background: rgba(0, 0, 0, 0.3);

      svg {
         width: 25px;
      }

      &.disabled {
         display: none;
      }
   }

   .next {
      right: 0;
   }

   .prev {
      left: 0;
   }

   .modal-action {
      background: rgba(0, 0, 0, 0.3);
      position: absolute;
      bottom: 1em;
      display: block;
      cursor: pointer;
      right: 1em;
      color: #DEB3AA;
   }

   .prev:hover, .next:hover, .modal-action:hover {
      background: rgba(0, 0, 0, 0.5);
   }
}

.calendaries {
   tbody {
      td.actions {
         i.material-icons {
            cursor: pointer;
            color: $terracota;
         }
      }
   }
}
/* ... */

